[KOGITO-9729] Fix permissions in default builder Dockerfile (#310)
Signed-off-by: Ricardo Zanini <zanini@redhat.com>

--- a/config/manager/sonataflow_builder_dockerfile.yaml
+++ b/config/manager/sonataflow_builder_dockerfile.yaml
@@ -7,7 +7,7 @@ ARG QUARKUS_EXTENSIONS
 ARG QUARKUS_ADD_EXTENSION_ARGS
 
 # Copy from build context to skeleton resources project
-COPY --chmod=644 * ./resources/
+COPY --chown=1001 . ./resources
 
 RUN /home/kogito/launch/build-app.sh ./resources
   
