--- a/bundle/manifests/sonataflow-operator-builder-config_v1_configmap.yaml
+++ b/bundle/manifests/sonataflow-operator-builder-config_v1_configmap.yaml
@@ -6,7 +6,7 @@ data:
     variables that can be overridden by the builder\n# To add a Quarkus extension
     to your application\nARG QUARKUS_EXTENSIONS\n# Args to pass to the Quarkus CLI
     add extension command\nARG QUARKUS_ADD_EXTENSION_ARGS\n\n# Copy from build context
-    to skeleton resources project\nCOPY --chmod=644 * ./resources/\n\nRUN /home/kogito/launch/build-app.sh
+    to skeleton resources project\nCOPY --chown=1001 . ./resources\n\nRUN /home/kogito/launch/build-app.sh
     ./resources\n  \n#=============================\n# Runtime Run\n#=============================\nFROM
     registry.access.redhat.com/ubi8/openjdk-11:latest\n\nENV LANG='en_US.UTF-8' LANGUAGE='en_US:en'\n
     \ \n# We make four distinct layers so if there are application changes the library
